@@ -1,0 +1,7 @@
+extern int bar ();
+
+int
+main ()
+{
+  return bar () - 42;
+}
