@@ -1,0 +1,5 @@
+int
+baz ()
+{
+  return 42;
+}
